m/跟踪开仓-记录资金-图像识别-4/DIARY/diary_20180815T194730.txt

ans =

C:\D\xyz\future\m\跟踪开仓-记录资金-图像识别-4\DIARY\diary_20180815T194730.txt

上次更新日期为: 2018-08-14 Tuesday

开始数据更新...

C:\D\xyz\future\数据维护\A888.csv 更新成功！
C:\D\xyz\future\数据维护\C888.csv 更新成功！
C:\D\xyz\future\数据维护\RB888.csv 更新成功！
C:\D\xyz\future\数据维护\M888.csv 更新成功！
C:\D\xyz\future\数据维护\P888.csv 更新成功！
C:\D\xyz\future\数据维护\J888.csv 更新成功！
C:\D\xyz\future\数据维护\ZN888.csv 更新成功！
C:\D\xyz\future\数据维护\Y888.csv 更新成功！
C:\D\xyz\future\数据维护\L888.csv 更新成功！
C:\D\xyz\future\数据维护\AG888.csv 更新成功！
C:\D\xyz\future\数据维护\TA888.csv 更新成功！
C:\D\xyz\future\数据维护\SR888.csv 更新成功！
C:\D\xyz\future\数据维护\AU888.csv 更新成功！
C:\D\xyz\future\数据维护\FG888.csv 更新成功！
C:\D\xyz\future\数据维护\MA888.csv 更新成功！
C:\D\xyz\future\数据维护\RU888.csv 更新成功！
C:\D\xyz\future\数据维护\AL888.csv 更新成功！
C:\D\xyz\future\数据维护\OI888.csv 更新成功！
C:\D\xyz\future\数据维护\RM888.csv 更新成功！
C:\D\xyz\future\数据维护\CF888.csv 更新成功！
C:\D\xyz\future\数据维护\I888.csv 更新成功！
C:\D\xyz\future\数据维护\JM888.csv 更新成功！
C:\D\xyz\future\数据维护\CU888.csv 更新成功！
C:\D\xyz\future\数据维护\V888.csv 更新成功！
C:\D\xyz\future\数据维护\IF888.csv 更新成功！

数据更新完成！

策略加载完成！
Elapsed time is 1.494015 seconds.
>>>>>>>>>>调用成功！
登录成功!
Elapsed time is 8.905821 seconds.
账户资金:645297
持仓合约查询失败！
Elapsed time is 18.112693 seconds.
load('TradableContract.mat')
Elapsed time is 5.166966 seconds.
>>>>>>>>>>调用成功！
未登录成功!
pyversion

       version: '3.6'
    executable: 'C:\Users\apple\Anaconda3\pythonw.exe'
       library: 'C:\Users\apple\Anaconda3\python36.dll'
          home: 'C:\Users\apple\Anaconda3'
      isloaded: 0

ll = py.list([1, 2, 3, 4])

ll = 

  Python <a href="matlab:helpPopup py.list" style="font-weight:bold">list</a> with no properties.

    [1.0, 2.0, 3.0, 4.0]

callPy1

res2 =

    12


names = 

  Python <a href="matlab:helpPopup py.list" style="font-weight:bold">list</a> with no properties.

    ['Johnson']

str=python('matlab_readlines.py','test.txt'); 

cmdString =

python matlab_readlines.py


cmdString =

python matlab_readlines.py test.txt

eval(['c=' str]) 
{Error: The input character is not valid in MATLAB statements or expressions.
} 
['c=' str]

ans =

c=  File "matlab_readlines.py", line 8
    print cell
             ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(cell)?


str

str =

  File "matlab_readlines.py", line 8
    print cell
             ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(cell)?


str=python('matlab_readlines.py','test.txt');

cmdString =

python matlab_readlines.py


cmdString =

python matlab_readlines.py test.txt

str

str =

  File "matlab_readlines.py", line 8
    print cell
             ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(cell)?


[a,b]=python('matlab_readlines.py','test.txt')

cmdString =

python matlab_readlines.py


cmdString =

python matlab_readlines.py test.txt


a =

  File "matlab_readlines.py", line 8
    print cell
             ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(cell)?



b =

     1

[a,b]=python('matlab_readlines.py','test.txt')

cmdString =

python matlab_readlines.py


cmdString =

python matlab_readlines.py test.txt


a =

  File "matlab_readlines.py", line 8
    print cell
             ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(cell)?



b =

     1

[a,b]=python('matlab_readlines.py','test.txt')

cmdString =

python matlab_readlines.py


cmdString =

python matlab_readlines.py test.txt


a =

  File "matlab_readlines.py", line 8
    print cell
             ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(cell)?



b =

     1

[a,b]=python('matlab_readlines.py','test.txt')
<a href="matlab: opentoline('C:\D\xyz\future\m\mCallPy\python.m',4,1)">4   </a>cmdString='python';
dbstep
<a href="matlab: opentoline('C:\D\xyz\future\m\mCallPy\python.m',5,1)">5   </a>for i = 1:nargin
if system_dependent('IsDebugMode')==1, dbstep; end
nargin

ans =

     2

if system_dependent('IsDebugMode')==1, dbstep; end
if system_dependent('IsDebugMode')==1, dbstep; end
if system_dependent('IsDebugMode')==1, dbstep; end
if system_dependent('IsDebugMode')==1, dbstep; end
if system_dependent('IsDebugMode')==1, dbstep; end
if system_dependent('IsDebugMode')==1, dbstep; end

cmdString =

python matlab_readlines.py

if system_dependent('IsDebugMode')==1, dbstep; end
if system_dependent('IsDebugMode')==1, dbstep; end
if system_dependent('IsDebugMode')==1, dbstep; end
if system_dependent('IsDebugMode')==1, dbstep; end
if system_dependent('IsDebugMode')==1, dbstep; end
if system_dependent('IsDebugMode')==1, dbstep; end
if system_dependent('IsDebugMode')==1, dbstep; end

cmdString =

python matlab_readlines.py test.txt

if system_dependent('IsDebugMode')==1, dbstep; end
if system_dependent('IsDebugMode')==1, dbquit; end
[a,b]=python('matlab_readlines.py','test.txt')
<a href="matlab: opentoline('C:\D\xyz\future\m\mCallPy\python.m',4,1)">4   </a>cmdString='python';
if system_dependent('IsDebugMode')==1, dbcont; end

cmdString =

python matlab_readlines.py


cmdString =

python matlab_readlines.py test.txt


a =

  File "matlab_readlines.py", line 10
    print "Can't open file "+fname
                           ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print("Can't open file "+fname)?



b =

     1

[a,b]=python('matlab_readlines.py','test.txt')

cmdString =

python matlab_readlines.py


cmdString =

python matlab_readlines.py test.txt


a =

{'This is test.txt ', '', 'It can help you test python.m ', '', 'and matlab_readlines.py'}



b =

     0

eval(['c=' str]) 
{Error: The input character is not valid in MATLAB statements or expressions.
} 
str

str =

  File "matlab_readlines.py", line 8
    print cell
             ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(cell)?


str=python('matlab_readlines.py','test.txt')

cmdString =

python matlab_readlines.py


cmdString =

python matlab_readlines.py test.txt


str =

{'This is test.txt ', '', 'It can help you test python.m ', '', 'and matlab_readlines.py'}


eval(['c=' str])

c = 

    'This is test.txt '    ''    'It can help you ...'    ''    'and matlab_readl...'

callPy2

cmdString =

python matlab_readlines.py


cmdString =

python matlab_readlines.py test.txt


c = 

    'This is test.txt '    ''    'It can help you ...'    ''    'and matlab_readl...'

 
c{1} =
 
This is test.txt 
 
 
c{2} =
 
     ''
 
 
c{3} =
 
It can help you test python.m 
 
 
c{4} =
 
     ''
 
 
c{5} =
 
and matlab_readlines.py
 
callPy2

cmdString =

python matlab_readlines.py


cmdString =

python matlab_readlines.py test.txt


c = 

    'This is test.txt '    'It can help you test py...'    'and matlab_readlines.py'

 
c{1} =
 
This is test.txt 
 
 
c{2} =
 
It can help you test python.m 
 
 
c{3} =
 
and matlab_readlines.py
 
callPy2

cmdString =

python matlab_readlines.py


cmdString =

python matlab_readlines.py test.txt


c = 

    'This is test.txt '    'It can help you test p...'    'and matlab_readlines.py'

 
c{1} =
 
This is test.txt 
 
 
c{2} =
 
It can help you test python.m 
 
 
c{3} =
 
and matlab_readlines.py
 
callPy2

cmdString =

python matlab_readlines.py


cmdString =

python matlab_readlines.py test.txt


c = 

    'This is test.txt '    'It can help you test py...'    'and matlab_readlines.py'

 
c{1} =
 
This is test.txt 
 
 
c{2} =
 
It can help you test python.m 
 
 
c{3} =
 
and matlab_readlines.py
 
callPy2

cmdString =

python matlab_readlines.py


cmdString =

python matlab_readlines.py test.txt


c = 

    'This is test.txt '    'It can help you test p...'    'and matlab_readlines.py'

 
c{1} =
 
This is test.txt 
 
 
c{2} =
 
It can help you test python.m 
 
 
c{3} =
 
and matlab_readlines.py
 
Elapsed time is 1.477561 seconds.
>>>>>>>>>>调用成功！
登录成功!
Elapsed time is 2.347382 seconds.
>>>>>>>>>>调用成功！
账户资金:2149900
持仓文件更新成功！
资金文件更新成功！
读TB输出文件...
读风险配置文件...
读资金文件...
输出订单文件...
2018/08/15,CF1901,平多,NaN
2018/08/15,CF1901,开空,6
2018/08/15,CU1810,开空,2
2018/08/15,ZN1810,平多,NaN
2018/08/15,ZN1810,开空,3
2018/08/15,SR1901,开空,17
订单文件更新成功！

orders = 

    '2018/08/15'    'CF1901'    '平多'    [ 6]
    '2018/08/15'    'CF1901'    '开空'    [ 6]
    '2018/08/15'    'CU1810'    '开空'    [ 2]
    '2018/08/15'    'SR1901'    '开空'    [17]
    '2018/08/15'    'ZN1810'    '平多'    [ 2]
    '2018/08/15'    'ZN1810'    '开空'    [ 3]


策略加载完成！
17*0.7

ans =

   11.9000

17*0.8

ans =

   13.6000

callPy2

cmdString =

python matlab_readlines.py


cmdString =

python matlab_readlines.py test.txt


c = 

    'This is test.txt '    'It can help you test p...'    'and matlab_readlines.py'

 
c{1} =
 
This is test.txt 
 
 
c{2} =
 
It can help you test python.m 
 
 
c{3} =
 
and matlab_readlines.py
 
callPy2

cmdString =

python matlab_readlines.py


cmdString =

python matlab_readlines.py test.txt


c = 

    'This is test.txt '    'It can help you test p...'    'and matlab_readlines.py'

 
c{1} =
 
This is test.txt 
 
 
c{2} =
 
It can help you test python.m 
 
 
c{3} =
 
and matlab_readlines.py
 

ans = 

    contract: 'CF1901'
      action: 'Sell EvenUp'
       hands: '6'
           n: 1


ans = 

    contract: 'CF1901'
      action: 'Sell Open'
       hands: '6'
           n: 2


ans = 

    contract: 'CU1810'
      action: 'Sell Open'
       hands: '2'
           n: 3


ans = 

    contract: 'SR1901'
      action: 'Sell Open'
       hands: '13'
           n: 4


ans = 

    contract: 'ZN1810'
      action: 'Sell EvenUp'
       hands: '2'
           n: 5


ans = 

    contract: 'ZN1810'
      action: 'Sell Open'
       hands: '3'
           n: 6


orderParameters = 

    'CU1810'    'Sell Open'    '2'

Error while evaluating TimerFcn for timer 'myMainTimer' 

Undefined function or variable 'TradableContract'.


